add header dropdown for server

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,11 +12,13 @@ body,
   /* Dark */
   --dark-navigation: #1E1F22;
   --dark-server: #2b2d31;
+  --dark-server-hover: #404249;
   --dark-server-bot: #232428;
   --dark-page: #313338;
   /* Light */
   --light-navigation: #e3e5e8;
   --light-server: #f2f3f5;
+  --light-server-hover: #ebedef;
   --light-server-bot: #ebedef;
   --light-page: #ffffff;
 }
