--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,3 +106,23 @@ body,
     @apply bg-zinc-300/50 dark:bg-[var(--dark-navigation)];
   }
 }
+
+@layer components {
+  .text-channel-section {
+    @apply text-zinc-500 hover:text-zinc-600 dark:text-zinc-400 dark:hover:text-zinc-300;
+  }
+}
+
+@layer components {
+  .text-channel-btn-no-hover {
+    @apply text-zinc-500 dark:text-zinc-400;
+  }
+
+  .text-channel-btn {
+    @apply text-channel-btn-no-hover hover:text-zinc-600 dark:hover:text-zinc-200;
+  }
+
+  .text-channel-btn-group {
+    @apply text-channel-btn-no-hover group-hover:text-zinc-600 dark:group-hover:text-zinc-200;
+  }
+}
