--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,6 +115,10 @@ body,
 }
 
 @layer components {
+  .text-on-channel {
+    @apply text-black dark:text-white;
+  }
+
   .text-channel-btn-no-hover {
     @apply text-zinc-500 dark:text-zinc-400;
   }
