feat(components): add server footer

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@ body,
   --dark-server-hover: #404249;
   --dark-server-selected: #35373c;
   --dark-server-active: #3f4147;
-  --dark-server-bot: #232428;
+  --dark-server-footer: #232428;
   --dark-page: #313338;
   /* Light */
   --light-navigation: #e3e5e8;
@@ -24,7 +24,7 @@ body,
   --light-server-hover: #dfe1e5;
   --light-server-selected: #d7d9dc;
   --light-server-active: #e6e6e8;
-  --light-server-bot: #ebedef;
+  --light-server-footer: #ebedef;
   --light-page: #ffffff;
 }
 
