feat(tailwind): add tailwind config for color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@ body,
 }
 
 :root {
+  /* Do not remove theese variables! Legacy only purposes! */
   /* Dark */
   --dark-navigation: #1E1F22;
   --dark-server: #2b2d31;
